BugFix and added new field

--- a/Translations/Fixed Asset Additional Functionalities.g.xlf
+++ b/Translations/Fixed Asset Additional Functionalities.g.xlf
@@ -843,6 +843,11 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Card Extension - Control FA Posting Group - Property ToolTip</note>
         </trans-unit>
+        <trans-unit id="PageExtension 742805820 - Control 1602339052 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Specifies the value of the FA Subclass Code field.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Card Extension - Control FA Subclass Code - Property ToolTip</note>
+        </trans-unit>
         <trans-unit id="PageExtension 1152214162 - Action 2924160797 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1395186723">
           <source>Executes the New FA Conversion action.</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -932,6 +937,11 @@
           <source>FA Posting Group</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Extension - Field FA Posting Group - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 2042781808 - Field 1602339052 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>FA Subclass Code</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Extension - Field FA Subclass Code - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 3903578189 - Field 1454633904 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 348912950">
           <source>Current Location</source>
